template files are all working

--- a/PurdueThesis.cls
+++ b/PurdueThesis.cls
@@ -4527,7 +4527,7 @@
                         {\ZZdegreefont\ZZdegree}\\
                         \vspace*{35pt}
                         % Use the improved vector Purdue seal from Ting-Wei Liu.
-                        \hbox to\textwidth{\hss\includegraphics[width=7.9cm]{gr-pu-seal-vector.pdf}\hss}
+                        \hbox to\textwidth{\hss\includegraphics[width=7.9cm]{./figs/template/gr-pu-seal-vector.pdf}\hss}
                         \vspace*{25pt}
                         \ZZwholename\ZZatinformation\\
                         \ZZcampus,~Indiana\\
