Worked out the template and front matter

--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 \maketitle
-% \input{b-front/fr0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+\input{./secs/0-front/fr0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
 % \input{Appendices/ap0-appendices.tex}   % Appendices
 % \input{d-back/bk0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
