--- a/thesis.tex
+++ b/thesis.tex
@@ -23,11 +23,10 @@
 \input{./ltx_core/ltx_pkgs.tex}
 \input{./ltx_core/new_cmds.tex}
 % ==============================================================
-% \bibliography{Part3/scr_refs, Part2/drone_refs, Part1/theory_refs}
+\bibliography{./secs/n-back/refs.bib}
 
 \begin{document}
 \maketitle
-\input{./secs/0-front/fr0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
-% \input{Appendices/ap0-appendices.tex}   % Appendices
-% \input{d-back/bk0-end.tex}              % Back content (vita, bib settings, etc.)
+\input{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+\input{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
