--- a/thesis.tex
+++ b/thesis.tex
@@ -28,5 +28,14 @@
 \begin{document}
 \maketitle
 \input{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+% ============================================================
+\input{./secs/1-intro/0-intro.tex}
+\input{./secs/2-data/0-data.tex}
+\input{./secs/3-cstr/0-cstr.tex}
+\input{./secs/4-governing_eqns/0-governing_eqns.tex}
+\input{./secs/5-NOx_mdl/0-NOx_mdl.tex}
+\input{./secs/6-sat_detect/0-sat_detect.tex}
+\input{./secs/7-conclusion/0-conclusion.tex}
+% =============================================================
 \input{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
