--- a/secs/0-template_options/____config_bibtex.tex
+++ b/secs/0-template_options/____config_bibtex.tex
@@ -11,7 +11,7 @@
 % \newcommand{\ZZBibProcessor}{BibLaTeX}
 \newcommand{\testBackend}{bibtex}
 \usepackage[backend=\testBackend, citestyle=numeric-comp, dashed=false, locallabelwidth=true, sortcites=true, style=ieee]{biblatex}
-\addbibresource{99_back/citations.bib}
+\addbibresource{./secs/n-back/refs.bib}
 % See
 % https://tex.stackexchange.com/questions/134191/line-breaks-of-long-urls-in-biblatex-bibliography
 \setcounter{biburllcpenalty}{7000}
