--- a/secs/0-template_options/te0-template.tex
+++ b/secs/0-template_options/te0-template.tex
@@ -4,4 +4,4 @@
 \input{./secs/0-template_options/te3-custom-commands.tex}
 \input{./secs/0-template_options/te4-custom-variables.tex}
 \input{./secs/0-template_options/te5-custom-colors.tex}
-\input{./secs/0-template_options/te6-acronyms.tex}
+% \input{./secs/0-template_options/te6-acronyms.tex}
