added content for data processing

--- a/secs/0-template_options/te00-template-options.tex
+++ b/secs/0-template_options/te00-template-options.tex
@@ -7,8 +7,8 @@
 \def\ZZgraduation{May 2026}
 
 % Title
-\def\ZZtitle{On-Board Diagnostics for Diesel Engine SCR-ASC Systems\\
-             Modelling, System Identification, and Aging Detection}
+\def\ZZtitle{On-Board Diagnostics for Diesel Engine Aftertreatment Systems:
+             Modelling, System Identification, and Catalyst Aging Detection}
 
 
 % -------------------- Degree Program ---------------------
