--- a/secs/2-data/pipeline.tex
+++ b/secs/2-data/pipeline.tex
@@ -1,6 +1,6 @@
 The signal processing steps for getting the viable data used for model validation are summarized bellow.
 \begin{figure}[H]
         \centering
-        \includegraphics[width = \textwidth]{./figs/Part3/DataProcessingPipeline.png}
-        \caption{Summary of Data Processing}
+        \includegraphics[width = 0.9\textwidth]{./figs/2-data/DataProcessingPipeline.png}
+        \caption{Summary of Signal Processing Steps for Test Cell Data}
 \end{figure}
