Added the dynamic model derivation

--- a/secs/2-data/0-data.tex
+++ b/secs/2-data/0-data.tex
@@ -127,3 +127,7 @@ period from engine start to engine stop.
         \hline \hline
         \end{tabular}
 \end{table}
+
+
+% ==============================================================================
+\input{./secs/2-data/n-res_time.tex}
