--- a/secs/3-governing_eqns/0-governing_eqns.tex
+++ b/secs/3-governing_eqns/0-governing_eqns.tex
@@ -1,1 +1,7 @@
 \chapter{SCR-ASC Reacting Flow Dynamics: Governing Equations}
+
+\input{./secs/3-governing_eqns/1-reactions.tex}
+\input{./secs/3-governing_eqns/2-NH3ads_proc_dyn.tex}
+\input{./secs/3-governing_eqns/3-NOx_proc_dyn.tex}
+\input{./secs/3-governing_eqns/4-NH3_proc_dyn.tex}
+\input{./secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex}
