added the process dynamics model

--- a/secs/3-governing_eqns/0-governing_eqns.tex
+++ b/secs/3-governing_eqns/0-governing_eqns.tex
@@ -5,3 +5,4 @@
 \input{./secs/3-governing_eqns/3-NOx_proc_dyn.tex}
 \input{./secs/3-governing_eqns/4-NH3_proc_dyn.tex}
 \input{./secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex}
+\input{./secs/3-governing_eqns/6-proc_dyn.tex}
