Working draft of the thesis

--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -71,3 +71,6 @@ and has additional uncertainties due to $NO_x$ sensor's cross-sensitivity to amm
 Finally, we develope a statistical test for detecting the catalyst aging based on the estimated parameters of the
 saturated catalyst model. The performance of the proposed aging detector is demonstrated using both test-cell and
 real-world truck data.
+
+
+\input{secs/1-intro/3-cstr/0-cstr.tex}
