--- a/secs/2-data/0-data.tex
+++ b/secs/2-data/0-data.tex
@@ -131,3 +131,4 @@ period from engine start to engine stop.
 
 % ==============================================================================
 \input{./secs/2-data/n-res_time.tex}
+\input{secs/5-sat_detect/paper/2-subs/2-4-NOx_crosssensitivity.tex}
