--- a/secs/4-NOx_mdl/0-NOx_mdl.tex
+++ b/secs/4-NOx_mdl/0-NOx_mdl.tex
@@ -1,3 +1,5 @@
 \chapter{$NO_x$ Reduction Dynamics: Discrete Nonlinear Model}
 
 \input{secs/4-NOx_mdl/1_NOx_r_mdl.tex}
+\input{secs/4-NOx_mdl/2_catalyst_saturation.tex}
+\input{secs/4-NOx_mdl/3_validation.tex}
