--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -1,1 +1,13 @@
 \chapter{Catalyst Saturation and Aging Detection}
+The catalyst saturation that is inherently considered in the CSTR approach needs to be explicitly included as separate
+mode of the system. The present work developed such a model under catalyst saturation which becomes one of the modes of
+the complete switched nonlinear model. Following the model development we present the parameter estimation algorithm
+that estimates the parameters of the saturated catalyst model using the real-world data whose operating mode is unknown
+and has additional uncertainties due to $NO_x$ sensor's cross-sensitivity to ammonia. Finally, we develope a statistical
+test for detecting the catalyst aging based on the estimated parameters of the saturated catalyst model. The performance
+of the proposed aging detector is demonstrated using both test-cell and real-world truck data.
+
+\input{secs/5-sat_detect/paper/3-MLE_estimation.tex}
+\input{secs/5-sat_detect/paper/4-catalyst_mode_detection.tex}
+\input{secs/5-sat_detect/paper/5-catalyst_aging.tex}
+\input{secs/5-sat_detect/paper/6-trucks.tex}
