\nocite doesnt work

--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -295,3 +295,9 @@
   volume    = {67},
   year      = {2019}
 }
+
+
+
+% ============================================================
+% References from Kaushal's Work
+% ============================================================
