--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 \maketitle
-\input{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
+% \input{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
 % ============================================================
 % \input{./secs/1-intro/0-intro.tex}
 % \input{./secs/2-data/0-data.tex}
