list of all the references

--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -30,6 +30,7 @@
   year    = {2023}
 }
 
+
 @article{ma2017observer,
   author    = {Ma, Yao and Wang, Junmin},
   journal   = {Journal of Dynamic Systems, Measurement, and Control},
@@ -68,6 +69,7 @@
   year        = {2008}
 }
 
+
 @article{devarakonda2009model,
   author    = {Devarakonda, Maruthi and Parker, Gordon and Johnson, John H and Strots, Vadim and Santhanam, Shyam},
   journal   = {SAE International Journal of Fuels and Lubricants},
@@ -91,10 +93,12 @@
   howpublished = {\url{https://en.wikipedia.org/wiki/Reactions_on_surfaces#Eley%E2%80%93Rideal_mechanism}},
 }
 
+
 @misc{langmuir,
   author       = {Wikipedia: Langmuir adsorption model},
   howpublished = {\url{https://en.wikipedia.org/wiki/Langmuir_adsorption_model}},
 }
+
 
 @article{prins2018eley,
   author    = {Prins, Roel},
@@ -106,7 +110,6 @@
   volume    = {61},
   year      = {2018}
 }
-
 
 
 @article{ciardelli2004scr,
@@ -140,6 +143,7 @@
   year      = {2012}
 }
 
+
 @techreport{joo2008study,
   author      = {Joo, Kihyung and Jo, Ji-Ho and Kim, ChangDae and Lee, Jin-ha and Kim, Hong-jip},
   institution = {SAE Technical Paper},
@@ -170,6 +174,7 @@
   year      = {2024}
 }
 
+
 @article{zhang2015nox,
   author    = {Zhang, Hui and Wang, Junmin},
   journal   = {Journal of Dynamic Systems, Measurement, and Control},
@@ -189,7 +194,8 @@
   year        = {2004}
 }
 
-@teckreport{AVLCruise,
+
+@techreport{AVLCruise,
   title        = {{AVL CRUISE M}},
   author       = {{AVL List GmbH}},
   organization = {{AVL List GmbH}},
@@ -197,8 +203,7 @@
   version      = {2025 R2},
   address      = {Graz, Austria},
   url          = {https://www.avl.com/en/simulation-solutions/simulation-software/avl-cruise-m},
-  }
-
+}
 
 % Detection Theory Textbook
 @book{kay1993estimation,
