Added all the references from kaushal

--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -82,24 +82,6 @@
 }
 
 
-@misc{chem_kine,
-  author       = {LibreTexts, Chemistry},
-  howpublished = {\url{https://chem.libretexts.org/Bookshelves/Physical_and_Theoretical_Chemistry_Textbook_Maps/Supplemental_Modules_(Physical_and_Theoretical_Chemistry)/Kinetics/02%3A_Reaction_Rates/2.05%3A_Reaction_Rate}},
-}
-
-
-@misc{eley_rideal,
-  author       = {Wikipedia: Eley–Rideal mechanism },
-  howpublished = {\url{https://en.wikipedia.org/wiki/Reactions_on_surfaces#Eley%E2%80%93Rideal_mechanism}},
-}
-
-
-@misc{langmuir,
-  author       = {Wikipedia: Langmuir adsorption model},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Langmuir_adsorption_model}},
-}
-
-
 @article{prins2018eley,
   author    = {Prins, Roel},
   journal   = {Topics in Catalysis},
@@ -306,3 +288,302 @@
 % ============================================================
 % References from Kaushal's Work
 % ============================================================
+@article{chen2016estimation,
+  author    = {Chen, Pingen and Wang, Junmin},
+  journal   = {Journal of Process Control},
+  pages     = {78--92},
+  publisher = {Elsevier},
+  title     = {Estimation and adaptive nonlinear model predictive control of selective catalytic reduction systems in automotive applications},
+  volume    = {40},
+  year      = {2016}
+}
+
+@article{ma2017observer,
+  author    = {Ma, Yao and Wang, Junmin},
+  journal   = {Journal of Dynamic Systems, Measurement, and Control},
+  number    = {2},
+  publisher = {American Society of Mechanical Engineers Digital Collection},
+  title     = {Observer-based estimation of aging condition for selective catalytic reduction systems in vehicle applications},
+  volume    = {139},
+  year      = {2017}
+}
+
+@article{jiang2019hydrothermal,
+  author    = {Jiang, Kai and Yan, Fengjun and Zhang, Hui},
+  journal   = {IEEE Transactions on Industrial Electronics},
+  number    = {1},
+  pages     = {442--450},
+  publisher = {IEEE},
+  title     = {Hydrothermal aging factor estimation for two-cell Diesel-engine SCR systems via a dual time-scale unscented Kalman filter},
+  volume    = {67},
+  year      = {2019}
+}
+
+@techreport{matsumoto2016model,
+  author      = {Matsumoto, Arifumi and Furui, Kenji and Ogiso, Makoto and Kidokoro, Toru},
+  institution = {SAE Technical Paper},
+  title       = {Model-based obd logic utilizing adsorption and desorption model of nh 3 in scr catalyst},
+  year        = {2016}
+}
+
+@misc{herman2010diagnostic,
+  author    = {Herman, Andrew D and Wu, Ming-Cheng and Cabush, David D},
+  month     = apr # {~29},
+  note      = {US Patent App. 12/327,945},
+  publisher = {Google Patents},
+  title     = {Diagnostic methods for selective catalytic reduction (scr) exhaust treatment system},
+  year      = {2010}
+}
+
+@misc{herman2010diagnostic,
+  author    = {Herman, Andrew D and Wu, Ming-Cheng and Cabush, David D},
+  month     = apr # {~29},
+  note      = {US Patent App. 12/327,945},
+  publisher = {Google Patents},
+  title     = {Diagnostic methods for selective catalytic reduction (scr) exhaust treatment system},
+  year      = {2010}
+}
+
+@misc{perrin2017diagnostic,
+  author    = {Perrin, James M and Levijoki, Stephen Paul},
+  month     = may # {~23},
+  note      = {US Patent 9,657,630},
+  publisher = {Google Patents},
+  title     = {Diagnostic systems and methods for selective catalytic reduction (scr) systems based on nox sensor feedback},
+  year      = {2017}
+}
+
+@misc{kim2017fault,
+  author    = {Kim, Mi-Jin and Chun, Jong-Ik and Kwon, Soon-Hyung},
+  month     = may # {~30},
+  note      = {US Patent 9,664,089},
+  publisher = {Google Patents},
+  title     = {Fault diagnosis method of scr system and an apparatus thereof},
+  year      = {2017}
+}
+
+@techreport{kim2007modeling,
+  author      = {Kim, Jeong Y and Cheng, Yisun and Patterson, Joseph E and Laing, Paul M and Lambert, Christine K},
+  institution = {SAE Technical Paper},
+  title       = {Modeling study of urea SCR catalyst aging characteristics},
+  year        = {2007}
+}
+
+@article{toops2010deactivation,
+  author    = {Toops, Todd J and Nguyen, Ke and Foster, Adam L and Bunting, Bruce G and Ottinger, Nathan A and Pihl, Josh A and Hagaman, Edward W and Jiao, Jian},
+  journal   = {Catalysis Today},
+  number    = {3-4},
+  pages     = {257--265},
+  publisher = {Elsevier},
+  title     = {Deactivation of accelerated engine-aged and field-aged Fe--zeolite SCR catalysts},
+  volume    = {151},
+  year      = {2010}
+}
+
+@article{jen2009detection,
+  author    = {Jen, Hung-Wen and Girard, James W and Cavataio, Giovanni and Jagner, Mark J},
+  journal   = {SAE International Journal of Fuels and Lubricants},
+  number    = {1},
+  pages     = {1553--1559},
+  publisher = {JSTOR},
+  title     = {Detection, origin and effect of ultra-low platinum contamination on diesel-SCR catalysts},
+  volume    = {1},
+  year      = {2009}
+}
+
+@techreport{gieshoff2000improved,
+  author      = {Gieshoff, J and Sch{\"a}fer-Sindlinger, A and Spurk, PC and Van Den Tillaart, JAA and Garr, G},
+  institution = {SAE Technical Paper},
+  title       = {Improved SCR systems for heavy duty applications},
+  year        = {2000}
+}
+
+@article{daya2020kinetic,
+  author    = {Daya, Rohil and Joshi, Saurabh Y and Luo, Jinyong and Dadi, Rama Krishna and Currier, Neal W and Yezerets, Aleksey},
+  journal   = {Applied Catalysis B: Environmental},
+  pages     = {118368},
+  publisher = {Elsevier},
+  title     = {On kinetic modeling of change in active sites upon hydrothermal aging of Cu-SSZ-13},
+  volume    = {263},
+  year      = {2020}
+}
+
+@article{daya2018development,
+  author    = {Daya, Rohil and Desai, Chintan and Vernham, Bruce},
+  journal   = {Emission Control Science and Technology},
+  number    = {3},
+  pages     = {143--171},
+  publisher = {Springer},
+  title     = {Development and validation of a two-site kinetic model for NH3-SCR over Cu-SSZ-13. Part 1. Detailed global kinetics development based on mechanistic considerations},
+  volume    = {4},
+  year      = {2018}
+}
+
+@article{cheng2007laboratory,
+  author    = {Cheng, Yisun and Xu, Lifeng and Hangas, Jon and Jagner, Mark and Lambert, Christine},
+  journal   = {SAE Transactions},
+  pages     = {187--194},
+  publisher = {JSTOR},
+  title     = {Laboratory postmortem analysis of 120k mi engine aged Urea SCR catalyst},
+  year      = {2007}
+}
+
+@techreport{devarakonda2008adequacy,
+  author      = {Devarakonda, Maruthi and Parker, Gordon and Johnson, John H and Strots, Vadim and Santhanam, Shyam},
+  institution = {SAE Technical Paper},
+  title       = {Adequacy of reduced order models for model-based control in a urea-SCR aftertreatment system},
+  year        = {2008}
+}
+
+@phdthesis{hsieh2010control,
+  author = {Hsieh, Ming-Feng},
+  school = {The Ohio State University},
+  title  = {Control of diesel engine urea selective catalytic reduction systems},
+  year   = {2010}
+}
+
+@article{hu2018failure,
+  author    = {Hu, Jie and Zeng, Jiawei and Wei, Li},
+  journal   = {Energy},
+  pages     = {103--121},
+  publisher = {Elsevier},
+  title     = {Failure diagnosis and tolerant control method for hydrothermally aged SCR system by utilizing EKF observer and MRAC controller},
+  volume    = {156},
+  year      = {2018}
+}
+
+@article{hu2017improving,
+  author    = {Hu, Jie and Zeng, Jiawei and Wei, Li and Yan, Fuwu},
+  journal   = {Sustainability},
+  number    = {4},
+  pages     = {611},
+  publisher = {MDPI},
+  title     = {Improving the diagnosis accuracy of hydrothermal aging degree of v2o5/wo3--tio2 catalyst in scr control system using an gs--pso--svm algorithm},
+  volume    = {9},
+  year      = {2017}
+}
+
+@techreport{stadlbauer2015adaptive,
+  author      = {Stadlbauer, Stephan and Waschl, Harald and del Re, Luigi},
+  institution = {SAE Technical Paper},
+  title       = {Adaptive SCR model for MPC control including aging effects},
+  year        = {2015}
+}
+
+@techreport{schar2004control,
+  author      = {Sch{\"a}r, Christoph Michael and Onder, Christopher H and Geering, HP and Elsener, M},
+  institution = {SAE Technical Paper},
+  title       = {Control-oriented model of an SCR catalytic converter system},
+  year        = {2004}
+}
+
+@inproceedings{upadhyay2002modeling,
+  author    = {Upadhyay, Devesh and Van Nieuwstadt, Michiel},
+  booktitle = {Asme international mechanical engineering congress and exposition},
+  pages     = {707--713},
+  title     = {Modeling of a urea SCR catalyst with automotive applications},
+  volume    = {36290},
+  year      = {2002}
+}
+
+@article{pezzini2009methodology,
+  author    = {Pezzini, A and Canova, M and Onori, S and Rizzoni, G and Soliman, A},
+  journal   = {IFAC Proceedings Volumes},
+  number    = {8},
+  pages     = {911--916},
+  publisher = {Elsevier},
+  title     = {A methodology for fault diagnosis of diesel NOx aftertreatment systems},
+  volume    = {42},
+  year      = {2009}
+}
+
+@article{yuan2015diesel,
+  author    = {Yuan, Xinmei and Liu, Hongqi and Gao, Ying},
+  journal   = {Emission Control Science and Technology},
+  number    = {2},
+  pages     = {121--133},
+  publisher = {Springer},
+  title     = {Diesel engine SCR control: current development and future challenges},
+  volume    = {1},
+  year      = {2015}
+}
+
+@book{nova2014urea,
+  author    = {Nova, Isabella and Tronconi, Enrico and others},
+  publisher = {Springer},
+  title     = {Urea-SCR technology for deNOx after treatment of diesel exhausts},
+  volume    = {5},
+  year      = {2014}
+}
+
+@article{zhao2015urea,
+  author    = {Zhao, Jinghua and Chen, Zhigang and Hu, Yunfeng and Chen, Hong},
+  journal   = {IFAC-PapersOnLine},
+  number    = {8},
+  pages     = {367--372},
+  publisher = {Elsevier},
+  title     = {Urea-scr process control for diesel engine using feedforward-feedback nonlinear method},
+  volume    = {48},
+  year      = {2015}
+}
+
+@article{ofoli2014experimental,
+  author    = {Ofoli, Abdul R},
+  journal   = {IEEE transactions on industry applications},
+  number    = {4},
+  pages     = {2342--2348},
+  publisher = {IEEE},
+  title     = {Experimental demonstration of ammonia storage and slip modeling with control for an SCR aftertreatment system},
+  volume    = {50},
+  year      = {2014}
+}
+
+@article{shrestha2016selective,
+  author    = {Shrestha, Sachi and Harold, Michael P and Kamasamudram, Krishna and Kumar, Ashok and Olsson, Louise and Leistner, Kirsten},
+  journal   = {Catalysis Today},
+  pages     = {130--144},
+  publisher = {Elsevier},
+  title     = {Selective oxidation of ammonia to nitrogen on bi-functional Cu--SSZ-13 and Pt/Al2O3 monolith catalyst},
+  volume    = {267},
+  year      = {2016}
+}
+
+@article{bonfils2014closed,
+  author    = {Bonfils, Anthony and Creff, Yann and Lepreux, Olivier and Petit, Nicolas},
+  journal   = {Journal of Process Control},
+  number    = {2},
+  pages     = {368--378},
+  publisher = {Elsevier},
+  title     = {Closed-loop control of a SCR system using a NOx sensor cross-sensitive to NH3},
+  volume    = {24},
+  year      = {2014}
+}
+
+@article{hsieh2011development,
+  author    = {Hsieh, Ming-Feng and Wang, Junmin},
+  journal   = {Control Engineering Practice},
+  number    = {4},
+  pages     = {409--422},
+  publisher = {Elsevier},
+  title     = {Development and experimental studies of a control-oriented SCR model for a two-catalyst urea-SCR system},
+  volume    = {19},
+  year      = {2011}
+}
+
+@article{schar2006control,
+  author    = {Schar, Christoph M and Onder, Christopher Harald and Geering, Hans P},
+  journal   = {IEEE Transactions on Control Systems Technology},
+  number    = {4},
+  pages     = {641--653},
+  publisher = {IEEE},
+  title     = {Control of an SCR catalytic converter system for a mobile heavy-duty application},
+  volume    = {14},
+  year      = {2006}
+}
+
+@article{majewski2012diesel,
+  author  = {Majewski, W Addy},
+  journal = {DieselNet Technology Guide},
+  title   = {What are diesel emissions},
+  year    = {2012}
+}
