--- a/thesis.tex
+++ b/thesis.tex
@@ -36,6 +36,7 @@
 % \input{./secs/5-sat_detect/0-sat_detect.tex}
 % \input{./secs/n-conclusion/0-conclusion.tex}
 % =============================================================
-\input{./secs/n-back/ref_list.tex}          % References test
+% \input{./secs/n-back/ref_list.tex}          % References test
+\nocite{*}
 \input{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
 \end{document}
